apps/servicey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicey
  namespace: servicey
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: servicey
